[package]
authors = ["Alexander Sepity <alexander.sepity@gmail.com>"]
categories = ["concurrency", "game-engines"]
description = "Minimalistic framework for automatic multithreading of hecs via rayon"
edition = "2018"
keywords = ["hecs", "parallel", "ecs", "entity", "component"]
license = "MIT OR Apache-2.0"
name = "yaks"
readme = "README.md"
repository = "https://github.com/Ratysz/yaks"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["parallel"]
# If disabled, forces everything to work on a single thread.
parallel = ["crossbeam-channel", "fixedbitset", "rayon"]
# If enabled, allows `Executor::run()` to also accept `resources::Resources`.
resources-interop = ["resources"]

[dependencies]
crossbeam-channel = {version = "0.5.2", optional = true}
fixedbitset = {version = "0.4.1", optional = true}
hecs = "0.7.5"
parking_lot = "0.11.2"
paste = "1.0.6"
rayon = {version = "1.5.1", optional = true}
resources = {version = "1.1.0", features = ["fetch"], optional = true}

[dev-dependencies]
rand = "0.8.4"
